--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "gulp": "^3.9.0",
     "gulp-browserify": "^0.5.1",
     "gulp-concat": "^2.6.0",
-    "gulp-react": "^3.1.0",
-    "gulp-uglify": "^1.5.1",
+    "gulp-rename": "^1.2.2",
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
     "reactify": "^1.1.1"
