--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
-    "generate": "nuxt generate"
+    "generate": "nuxt generate",
+    "deploy": "push-dir --dir=dist --branch=renovation --cleanup"
   },
   "dependencies": {
     "core-js": "^3.8.3",
@@ -15,6 +16,7 @@
     "nuxt": "^2.14.12"
   },
   "devDependencies": {
-    "@nuxtjs/vuetify": "^1.11.3"
+    "@nuxtjs/vuetify": "^1.11.3",
+    "push-dir": "^0.4.1"
   }
 }
